test/bad/function_declaration_05.mpp
fun f(:bool):int { return 0; }
